Changes by omero